# hegemon

./: .travis.yml  Cargo.toml  README.md
src/: main.rs  model.rs  stream.rs  terminal.rs  theme.rs  view.rs
src/providers/: cpu.rs  fan.rs  memory.rs  mod.rs  network.rs  temperature.rs
