[package]
name = "hegemon"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A modular system monitor"
repository = "https://github.com/p-e-w/hegemon"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
name = "hegemon"
path = "src/main.rs"

[dependencies]
chan = "0.1.23"
chan-signal = "0.3.3"
regex = "1.3.1"
termion = "1.5.3"
systemstat = "0.1.5"
sensors = "0.2.1"
